--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
   }
   
   .project {
-    display: flex;
+    display: block;
     flex-direction: row;
     background-color: #f4f4f4;
     border-left: 5px solid #50648b;
@@ -151,10 +151,16 @@ body {
     flex-wrap: wrap;
   }
   
-  .project-media img,
-  .project-media video {
-    width: 700px;
-    height: auto;
+  .media img{
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+  }
+  
+  .media iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;
     border-radius: 8px;
     object-fit: cover;
   }
