--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body {
   .project {
     display: block;
     flex-direction: row;
-    background-color: #f4f4f4;
+    background-color: #e4e4e4;
     border-left: 5px solid #50648b;
     padding: 20px;
     padding-top: 5px;
@@ -232,4 +232,40 @@ body {
     100% {
       transform: translateX(-50%);
     }
+  }
+
+
+  details {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 0.8em 1em;
+    background-color: #f4f4f4;
+    max-width: auto;
+    margin: 1em auto;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  }
+
+  summary {
+    cursor: pointer;
+    font-size: 1.2em;
+    font-weight: bold;
+    list-style: none;
+    position: relative;
+    padding-right: 1.5em;
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
+
+  summary::after {
+    content: "▼";
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: transform 0.3s ease;
+  }
+
+  details[open] summary::after {
+    transform: rotate(180deg);
   }
